--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             Hi, I am Greg. I am 20 years old and I love programming. I started 5 years ago, but I wasn't working on any big projects. I was using BBCode and I found it interesting. After some years I got interested in html and I have created my first webpage with tables. I also love ping-pong and I used to play it a lot. I even took part in (a competition | competitions) but that was years ago. Now I am focusing on (Javascript | Javascript & ES6) and frameworks.
         </article>
     </section>
-    <section class="container">
+    <section class="container container-projects">
         <div class="header align">
             <h2>
                 Projects
@@ -50,16 +50,24 @@
             <div class="image-place"></div>
         </article>
         <aside class="left-top-content align">
-                <img class="mini-graphic" id="img/1.png" data-website-link="0" src="img/1.png" alt="Sklep komputerowy" title="Sklep komputerowy">
+            <a href="https://github.com/gborkowski1998/sklep" target="_blank">
+                <img class="mini-graphic" id="img/1.png" src="img/1.png" alt="Sklep komputerowy" title="Sklep komputerowy">
+            </a>
         </aside>
         <aside class="left-bottom-content align">
-                <img class="mini-graphic" id="img/2.png" data-website-link="1" src="img/2.png" alt="Portfolio 2017" title="Portfolio 2017">   
+            <a href="https://github.com/gborkowski1998/portfolio2017" target="_blank">
+                <img class="mini-graphic" id="img/2.png" src="img/2.png" alt="Portfolio 2017" title="Portfolio 2017">   
+            </a>
         </aside>
         <aside class="right-top-content align">
-                <img class="mini-graphic project" data-website-link="2" id="img/3.png" src="img/3.png" alt="Projekt E.14" title="Projekt E.14">
+            <a href="https://github.com/gborkowski1998/projektE14" target="_blank">
+                <img class="mini-graphic" id="img/3.png" src="img/3.png" alt="Projekt E.14" title="Projekt E.14">
+            </a>
         </aside>
         <aside class="right-bottom-content align">
-                <img class="mini-graphic" id="img/4.png" data-website-link="3" src="img/4.png" alt="Warspear Online" title="Warspear Online">
+            <a href="https://github.com/gborkowski1998/amping" target="_blank">
+                <img class="mini-graphic" id="img/4.png" src="img/4.png" alt="Warspear Online" title="Warspear Online">
+            </a>
         </aside>
     </section>
     <section class="container-technologies">
