--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </section>
     <footer>
             <h3>
-                &copy; Grzegorz Borkowski - All rights reserved! <a href="mailto:gborkowski1998@gmail.com" title="Send e-mail!">gborkowski1998@gmail.com</a>
+                &copy; Grzegorz Borkowski - All rights reserved! <a class="mail" href="mailto:gborkowski1998@gmail.com" title="Send e-mail!">gborkowski1998@gmail.com</a>
             </h3>
         </footer> 
 </body>
