--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             <div class="projects">
                     I have already made a few projects in my life. At the time of creation, I had little to no coding experience. When I look
                     back at those projects, I realise that they weren't developed perfectly and need some improvements. I worked on these
-                    in 2017 and, nevertheless the unprofessional code structure, I think the concept behind the projects are very interesting.
+                    mostly in 2017 and, nevertheless the unprofessional code structure, I think the concept behind the projects are very interesting.
                     All of those projects are made completely by me (except Projekt E.14, where I was designing HTML, CSS and JavaScript).
-                    The most difficult one was my old portfolio, which took me almost a full week of coding, 4 to 6 hours a day.
+                    The most difficult one was my old portfolio, which took me almost a full week of coding, 4 to 6 hours a day. I also enjoy my <a href="http://amping.esy.es>amping</a>, fully responsive website.
             </div>
             <div class="image-place"></div>
         </article>
@@ -65,7 +65,7 @@
             </a>
         </aside>
         <aside class="right-bottom-content align">
-            <a href="https://github.com/gborkowski1998/amping" target="_blank">
+            <a href="http://amping.esy.es" target="_blank">
                 <img class="mini-graphic" id="img/4.png" src="img/4.png" alt="Warspear Online" title="Warspear Online">
             </a>
         </aside>
