--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     back at those projects, I realise that they weren't developed perfectly and need some improvements. I worked on these
                     mostly in 2017 and, nevertheless the unprofessional code structure, I think the concept behind the projects are very interesting.
                     All of those projects are made completely by me (except Projekt E.14, where I was designing HTML, CSS and JavaScript).
-                    The most difficult one was my old portfolio, which took me almost a full week of coding, 4 to 6 hours a day. I also enjoy my <a href="http://amping.esy.es>amping</a>, fully responsive website.
+                    The most difficult one was my old portfolio, which took me almost a full week of coding, 4 to 6 hours a day. I also enjoy my <a href="http://amping.esy.es">amping</a>, fully responsive website.
             </div>
             <div class="image-place"></div>
         </article>
